@@ -174,6 +174,11 @@ from a menu action.</p>
 </li>
 </ul>
 <ul>
+<li><a href="AppKit/TinyURLService">TinyURLService</a><p>Another simple service, this one converts URL or strings from the
+pasteboard to tinyurl.com equivalents (shift-cmd-V by default).</p>
+</li>
+</ul>
+<ul>
 <li><a href="AppKit/ToDo">Todo</a><p>A more complex NIB based applications. This is a document-based application.
 The code is a translation into Python of an example project in 
 <a href="http://www.oreilly.com/catalog/learncocoa2/">Learning Cocoa</a> from O'Reilly</p>
